Add my own configuration to git.

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@ init_local.el
 init-local-prolog.el
 init-local-prefs.el
 # New names:
-before-init.el
-after-init.el
-prefs.el
+#before-init.el
+#after-init.el
+#prefs.el
 local
 
 # Melpa packages
